--- a/test/index.html
+++ b/test/index.html
@@ -16,6 +16,7 @@
             nwNotify.notify({
                 title: 'Notification ' + numPrivate,
                 text: 'Haha',
+                sound: './test/notification.wav',
                 onClickFunc: handleClick,
                 onShowFunc: function(event) { console.log('onShow ' + numPrivate, event) },
                 onCloseFunc: function(event) { console.log('onClose ' + numPrivate, event) }
